# rambo

./: 2303v2_2307v3_PH1_Brief_Production_withDT.ipynb  Mehrwertmessung_Zhu_Refactored_2526 (1).ipynb  Nutzenmesskonzept_Rechnungsversand.docx  fail.py  mehrwert_doku (1).docx  mehrwert_doku.docx  mehrwert_doku.html
da-plu/: DESIGN.md  README.md  config.example.yaml  config.production.yaml  config.smoke.yaml  config.tuning.yaml
da-pluto-time/: DESIGN.md  (+6 more)
rubinpyreads/: pyproject.toml  requirements.txt  run_explain.py
rubinpyreads/app/: rubin_ui_src.jsx
rubinpyreads/app/frontend/: index.html
rubinpyreads/app/routes/: analysis.py  config.py  data.py  health.py
rubinpyreads/app/src/: 01_constants.jsx  02_components.jsx  03_presets.jsx  06_page_dataprep.jsx  08_page_data.jsx  10_page_models.jsx  11_page_tuning.jsx  12_yaml_export.jsx  14_app.jsx
rubinpyreads/configs/: config_benchmark.yml  config_binary_treatment.yml  config_catboost_intensiv.yml  config_catboost_standard.yml  config_explainability.yml  config_reference_all_options.yml
rubinpyreads/docs/: CHANGELOG.md  README_DE.md  bundles.md  explainability.md  konfiguration.md
rubinpyreads/production/: PRODUKTIVSETZUNG.md  run_scoring.py  run_scoring.sh  run_scoring_saspy.py  scoring_template_file.yml
rubinpyreads/rubin/: model_registry.py  preprocessing.py  settings.py
rubinpyreads/rubin/evaluation/: evaluation_plots.py  score_plots.py  uplift_metrics.py
rubinpyreads/rubin/explainability/: shap_uplift.py
rubinpyreads/rubin/pipelines/: analysis_pipeline.py  data_prep_pipeline.py  production_pipeline.py
rubinpyreads/rubin/reporting/: html_report.py
rubinpyreads/rubin/tuning/: base_learner.py  causal_forest.py  final_model.py
rubinpyreads/rubin/utils/: categorical_patch.py  data_utils.py  plot_theme.py
rubinpyreads/scripts/: check_ui_sync.py
rubinpyreads/tests/: test_categorical_patch.py  test_dataprep_id_exclusion.py  test_explainability_plots.py  test_feature_selection.py  test_mlflow_file_store_optin.py  test_model_registry.py  test_preprocessing_bytes.py  test_reset_endpoint.py  test_settings.py  test_treatment_replacement.py  test_uplift_metrics.py
rubinpyreads/tests/data/: report_golden.html
(+1150 files in other folders)
